--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,12 @@ li span.active::before{
 .logo {
   cursor: pointer;
 }
+
+.loader {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 200px;
+  border-radius: 50%;
+  background: #fff;
+}
